--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -32,6 +32,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
+      - name: Pre-commit Hooks
+        uses: pre-commit/action@v3
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v2
