--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,7 +1,7 @@
 logoText = "Bogdan Cioată"
 logoType = "short" # long, short
 description = "Bogdan Cioată's presentation website"
-welcomeMessage = "I’m a cloud data engineer and here is where you can learn more about me. I will write down what I learn at work or in my own time."
+welcomeMessage = "I’m a cloud data engineer. Here is where you can learn more about what I do in my spare time."
 custom_css = []
 custom_js = []
 useFaviconGenerator = false # https://www.favicon-generator.org/
@@ -67,8 +67,8 @@ whoami = "Data engineer"
 bioImageUrl = ""
 useGravatar = false
 location = "Copenhagen, Denmark"
-organization = "Intellishore"
-link = "https://bogdancioata.com"
+organization = "INTELLISHORE"
+link = "https://bogdan-cioata.github.io/"
 
 # sidebar
 enableBio = false
